Projects/05-Slide-navigation/src/css/main.css
:root {
	--clr-secondary-a: #6672c3;
}

body {
	overflow-x: hidden;
}

main {
	height: calc(100vh - 72px);
}

/* ----- close-menu ----- */
.open-menu .bar {
	display: block;
	width: 25px;
	height: 2px;
	margin: 5px auto;
	transition: background 0.2s ease-out;
	background-color: var(--bs-black);
}

.close-menu {
	position: absolute;
	top: 50%;
	left: 0;
	padding: 1.5rem 1rem;
	transform: translateY(-50%) rotate(0);
	transition: border-color 0.2s ease-out, left 0.4s ease-in-out 0.2s,
		transform 0.45s ease-in-out 0.2s;
	box-shadow: 0 0 1rem rgba(0, 0, 0, 0.075);
}
.close-menu:hover,
.close-menu:focus,
.close-menu:active {
	border-color: var(--clr-secondary-a) !important;
}

.menu-open .close-menu {
	left: -27px;
	transform: translateY(-50%) rotate(45deg);
}

.close-menu .bar {
	display: block;
	width: 20px;
	height: 2px;
	transition: background 0.2s ease-out;
	background-color: var(--bs-secondary);
}

.close-menu:hover .bar,
.close-menu:focus .bar,
.close-menu:active .bar {
	background-color: var(--clr-secondary-a) !important;
}

.close-menu .bar-a {
	transform: rotate(-90deg) translateX(0px);
}
.close-menu .bar-b {
	transform: translateY(-2px);
}

/* ----- contact-us ----- */
.contact-us {
	position: absolute;
	bottom: 2rem;
	left: 3rem;
}

/* ----- title ----- */
.title {
	font-size: 1.45rem;
	z-index: 99;
}

.title a {
	text-decoration-color: transparent;
	transition: text-decoration 0.2s ease-out, color 0.3s ease-out;
}
.title a:hover,
.title a:focus {
	text-decoration-color: currentColor;
}

/* ----- slide-navigation ----- */
.slide-navigation {
	position: fixed;
	top: 0;
	bottom: 0;
	right: -380px;
	width: 340px;
	height: 100%;
	z-index: 999;
	padding: 2rem 3rem;
	transition: right 0.5s ease-in-out;
	box-shadow: -0.25rem 0 1rem rgba(0, 0, 0, 0.075);
}

.slide-navigation.menu-open {
	right: 0;
}

.slide-navigation a {
	color: var(--bs-secondary);
	text-decoration: none;
	transition: color 0.2s ease-out;
}
.slide-navigation a:hover,
.slide-navigation a:focus {
	color: var(--clr-secondary-a);
}

/* ----- menu ----- */
.menu a {
	position: relative;
	font-size: 1.8rem;
	transform: translateX(50px);
	transition: transform 0.2s ease-in-out;
}

.menu a:nth-of-type(1) {
	transition-delay: 0.1s;
}
.menu a:nth-of-type(2) {
	transition-delay: 0.2s;
}
.menu a:nth-of-type(3) {
	transition-delay: 0.3s;
}
.menu a:nth-of-type(4) {
	transition-delay: 0.4s;
}

.menu-open .menu a {
	transform: translateX(0);
}

.menu a::after {
	display: inline-block;
	position: absolute;
	content: "";
	width: 120%;
	height: 2px;
	bottom: 0;
	left: 50%;
	opacity: 0;
	visibility: hidden;
	transition: background 0.2s ease-out, left 0.25s ease-out,
		opacity 0.3s ease-out, visibility 0.3s ease-out;
	background-color: var(--bs-secondary);
}
.menu a:hover::after,
.menu a:focus::after {
	left: 0;
	opacity: 1;
	visibility: visible;
	background-color: var(--clr-secondary-a);
}

/* ----- black-filter ----- */
.black-filter {
	position: fixed;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	z-index: 99;
	width: 100%;
	height: 100%;
	opacity: 0;
	visibility: hidden;
	transition: 0.45s ease-in-out;
	background-color: rgba(0, 0, 0, 0.3);
}

.black-filter.active {
	opacity: 1;
	visibility: visible;
}

.hero {
	display: flex;
	height: 100%;
	align-items: center;
	background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.45)),
		url(../images/main/hero-bg.jpg) no-repeat center/cover;
}

figure {
	max-width: 850px;
}

blockquote p::before,
blockquote p::after {
	display: inline-block;
	color: var(--bs-white);
}
blockquote p::before {
	content: "\201C";
}
blockquote p::after {
	content: "\201D";
}

@media screen and (min-width: 992px) {
	.title {
		font-size: 1.75rem;
	}

	.menu a {
		font-size: 2rem;
	}
}

